GTK3: fix gnome-terminal transparent scrollbar

--- a/src/sass/gtk3/_applications.scss
+++ b/src/sass/gtk3/_applications.scss
@@ -135,7 +135,7 @@ terminal-window,
 .mate-terminal {
   notebook {
     scrollbar {
-      background: none;
+      background: $base_color;
     }
   }
 }
